# tolk2spd

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml
.github/workflows/: build.yml
tolk2spd_abi/: Cargo.toml
tolk2spd_abi/src/: lib.rs
tolk2spd_test/: Cargo.toml
tolk2spd_test/.cargo/: config.toml
tolk2spd_test/src/: main.rs
tolk2spd_unix/: Cargo.toml
tolk2spd_unix/.cargo/: config.toml
tolk2spd_unix/src/: ffi.rs  lib.rs  whoami.rs
tolk2spd_win32/: Cargo.toml  build-debug.sh  build-release.sh
tolk2spd_win32/.cargo/: config.toml
tolk2spd_win32/src/: ffi.rs  lib.rs
