[package]
name = "tolk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tolk2spd_abi = { path = "../tolk2spd_abi" }
windows-sys = { version = "0.61", features = [
    "Wdk_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
windows-strings = "0.5"
